Navbar spacing fixed; update: navbar

--- a/css/faq.css
+++ b/css/faq.css
@@ -5,6 +5,7 @@ html {
 
 body {
     background: #f5d9d5;
+    font-family: "Nunito", sans-serif;
 }
 
 /* Navigationbar */
